--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.2
   provider: ^6.1.2
+  google_maps_flutter: ^2.6.0
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.3
+  flutter_map: ^6.1.0
+  geolocator: ^11.0.0
+  latlong2: ^0.9.1
+  flutter_map_marker_cluster: ^1.3.5
+  flutter_map_marker_popup: ^6.1.2
 
 dev_dependencies:
   flutter_test:
